--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Ultroid Support
-    url: https://t.me/UltroidSupport
+  - name: Kiccha Request
+    url: https://t.me/KicchaRequest
     about: Please drop your doubts or queries there for an immediate response.
-  - name: Documentation
-    url: https://ultroid.tech/
+  - name: Movie Update Channel
+    url: https://t.me/gd_film
     about: Basic documentation for setting up.
